--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -418,6 +418,14 @@ a[role="presentation"] {
     }
   }
 
+  .eureka__crop-modal {
+    input[type="radio"]:checked {
+      + label {
+        @extend %pressed;
+      }
+    }
+  }
+
   button {
     &[aria-pressed="true"] {
       @extend %pressed;
